# ursina

./: .gitignore  .gitmodules  CONTRIBUTING.md  FUNDING.yml  LICENSE  MANIFEST.in  README.md  api_reference.html  application.py  asset_button.py  bitmap_editor.py  box_collider.py  button.py  camera.py  collider.py  collision.py  color.py  color_scheme.psd  debug.py  debugwindow.py  direct_button.py  documentation.html  documentation_generator.py  editor.py  editor_camera.py  empty_app.py  entity.py  gameobject.py  index.html  install.bat  keys.py  main.py  mouse.py  move_gizmo.py  pandaeditor.py  profile_imports.bat  projectExporter.py  project_structure.txt  pyproject.toml  scene.py  (+7 more)
.devcontainer/: devcontainer.json
.github/workflows/: lint_python.yml
docs/: CNAME  DirectionalLight_example.py  OFL.html  _getting_started.sswg  _getting_started.txt  animation.html  animation.sswg  animation.txt  api_reference.css  api_reference.html  api_reference_sidebar.html  asset_store.html  asset_store.sswg  asset_store.txt  building.html  building.sswg  building.txt  cheat_sheet.html  cheat_sheet_dark.html  clicker_game.html  clicker_game.sswg  clicker_game.txt  collision.html  collision.sswg  collision.txt  column_graph.html  column_graph.sswg  column_graph.txt  coordinate_system.html  coordinate_system.sswg  coordinate_system.txt  doc_index.html  doc_index.sswg  doc_index.txt  doc_index_sidebar.html  doc_index_sidebar.sswg  doc_index_sidebar.txt  documentation.html  documentation.sswg  documentation.txt  (+91 more)
docs/api_reference_v8_0_0/: ambient_light.html  animation.html  animator.html  api_reference.html  application.html  array2_d.html  array3_d.html  array_tools.html  ascii_editor.html  audio.html  box_collider.html  boxcast.html  build.html  button.html  button_group.html  button_list.html  camera.html  checkbox.html  circle.html  collider.html  color.html  color_picker.html  colored_lights_shader.html  cone.html  content_types.html  conversation.html  cubic_bezier.html  cursor.html  curve.html  cylinder.html  directional_light.html  draggable.html  dropdown_menu.html  dropdown_menu_button.html  duplicate.html  editor_camera.html  entity.html  file_browser.html  file_browser_save.html  file_button.html  (+71 more)
docs/api_reference_v8_0_1/: ambient_light.html  animation.html  animator.html  application.html  array2_d.html  array3_d.html  array_tools.html  ascii_editor.html  audio.html  box_collider.html  boxcast.html  build.html  button.html  button_group.html  button_list.html  camera.html  checkbox.html  circle.html  collider.html  color.html  color_picker.html  colored_lights_shader.html  cone.html  content_types.html  conversation.html  cubic_bezier.html  curve.html  cylinder.html  directional_light.html  draggable.html  dropdown_menu.html  duplicate.html  editor_camera.html  entity.html  file_browser.html  file_browser_save.html  first_person_controller.html  frame_animation3d.html  fresnel_shader.html  func.html  (+65 more)
docs/api_reference_v8_2_0/: animation.html  animator.html  application.html  array2_d.html  array3_d.html  array_tools.html  ascii_editor.html  audio.html  box_collider.html  boxcast.html  build.html  button.html  (+89 more)
internal_models/: canvas.blend  canvas.blend1  cube.blend  cube.blend1  cube.egg  quad.blend1  quad_rounded.egg
internal_prefabs/: ask_for_scene_name_menu.py  canvas.py  editor_button.py  entity_list.py  filebrowser.py  first_person_controller.py  generator_1.py  input_field.py  inspector.py  panel.py  text.py  transform_gizmo.py  voxel.py  voxel_tool.py
internal_scenes/: minecraft_clone.py  project_browser.py  puzzle_game.py
internal_scripts/: add_script_button.py  canvas.py  editor.py  editor_button.py  editor_camera_script.py  grid_layout.py  load_model_button.py  load_scene_button.py  load_texture_button.py  menu_toggler.py  new_scene.py  replace_model_button.py  replace_texture_button.py  save_scene_button.py  scrollable.py  selection_button.py  setup.py  test.py
internal_textures/: fontsplitter.py
level_editor/: editor.py  file_manager.py  main.py
models/: quad.blend  quad.egg  quad_double_sided.blend  quad_double_sided.egg  quad_rounded.egg  teri.egg
pandaeditor/: __init__.py  application.py  build.py  camera.py  collider.py  color.py  debug.py  debugwindow.py  derplerp.py  entity.py  input.py  keys.py  main.py  mouse.py  pandaeditor.py  pandamath.py  pandastuff.py  raycaster.py  scene.py  text_splitter.py  ui.py  undo.py  window.py
prefabs/: button.py  editor_button.py  entity_list.py  filebrowser.py  inspector.py  panel.py  text.py  transform_gizmo.py
samples/: 3d_level_editor_old.py  _run_all_samples.py  after_decorator_example.py  angle_lerping.py  animation_export_test_scene.blend  animation_export_test_scene.blend1  autoblock_4.py  baked_dynamic_shadows.py  battle.py  bug.py  bug_2.py  bug_3.py  build_test.py  bullet_hell.py  cheap_physics.py  clicker_game.py  clicker_game.py.txt  column_graph.py  column_graph.py.txt  config.py  culumn_graph.py  digging_game.py  documentation_generator.py  drawing_software.py  empty_app.py  entity_demo.py  example_game.py  fps.py  fps.py.txt  grass_fields.py  heightmap_editor.py  heksekraft.py  inventory.py  inventory.py.txt  lights.py  loading_screen.py  look_at_2d_example.py  look_at_test.py  main_menu.py  main_menu_simple.py  (+38 more)
scenes/: editor.py
scripts/: asset_button.py  editor_camera.py  editor_camera_script.py  load_texture_button.py  menu_toggler.py  selection_button.py
test/: test_main.py
tests/: readme.txt
textures/: build_font.bat  fontsplitter.py
ursina/: __init__.py  application.py  array_tools.py  audio.py  boxcast.py  build.py  camera.py  cmd_tool_maker.py  collider.py  collision_zone.py  color.py  curve.py  debug.py  debugwindow.py  destroy.py  duplicate.py  easing_types.py  entity.py  entity_actor.py  event_handler.py  fastmesh.py  gamepad.py  generate_docs.py  hit.py  hit_info.py  input.py  input_handler.py  joystick.py  keyboard.py  light.py  lights.py  main.py  mesh.py  mesh_exporter.py  mesh_importer.py  mouse.py  music_system.py  networking.py  pandamath.py  pandastuff.py  (+27 more)
(+562 files in other folders)
